--- a/styles/habitation/habitation.module.scss
+++ b/styles/habitation/habitation.module.scss
@@ -8,3 +8,11 @@
 .text_style {
   color: white;
 }
+
+// .horizontal-line {
+//   width: 6rem;
+//   height: 0.18rem;
+//   color: #20ea3c;
+//   background-color: #20ea3c;
+//   margin: 0;
+// }
