add internationalization and fix other css issues

--- a/styles/habitation/habitation.module.scss
+++ b/styles/habitation/habitation.module.scss
@@ -9,10 +9,10 @@
   color: white;
 }
 
-// .horizontal-line {
-//   width: 6rem;
-//   height: 0.18rem;
-//   color: #20ea3c;
-//   background-color: #20ea3c;
-//   margin: 0;
-// }
+.horizontal_line {
+  width: 2.5rem;
+  height: 0.18rem;
+  color: #20ea3c;
+  background-color: #20ea3c;
+  margin: 0;
+}
