--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -1,5 +1,10 @@
 $primary-color: #64ff00;
+$home-bg-color: #98AFC7;
  
 :export {
   primaryColor: $primary-color;
+}
+
+:export {
+  homebgColor: $home-bg-color;
 }
