--- a/styles/slug/slug.module.scss
+++ b/styles/slug/slug.module.scss
@@ -17,7 +17,7 @@
     opacity: 0;
 }
 .popup1{
-    position: fixed;
+    // position: fixed;
     // left:34%;
     // top:26%;
     display: block;
