--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -1,9 +1,11 @@
 $primary-color: #64ff00;
+$secondary-color: orange;
 $home-bg-color: #98AFC7;
 $white-color: #ffff;
 
 :export {
   primaryColor: $primary-color;
+  secondaryColor: $secondary-color;
   whiteColor: $white-color;
   homebgColor: $home-bg-color;
 }
