--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -107,6 +107,7 @@
 .logo {
   position: relative;
 }
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -178,11 +179,9 @@
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
+    background: linear-gradient(to bottom,
+        rgba(var(--background-start-rgb), 1),
+        rgba(var(--callout-rgb), 0.5));
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
@@ -193,11 +192,9 @@
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
+    background: linear-gradient(to bottom,
+        transparent 0%,
+        rgb(var(--background-end-rgb)) 40%);
     z-index: 1;
   }
 }
@@ -223,6 +220,7 @@
   from {
     transform: rotate(360deg);
   }
+
   to {
     transform: rotate(0deg);
   }
@@ -242,7 +240,7 @@ $primary-color: #64ff00;
   width: 5rem;
   height: 0.18rem;
   color: #20ea3c;
-  background-color: #20ea3c;
+  // background-color: #20ea3c;
   margin: 0;
   margin-top: 8px;
   border: 5px;
@@ -288,9 +286,11 @@ $primary-color: #64ff00;
   .page_header_text {
     font-size: 16px;
   }
+
   .header_text {
     font-size: 14px;
   }
+
   .banner_image_container {
     span {
       font-size: 14px;
